--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,8 @@
     </header>
     <%= yield %>
     </div>
+    <footer id="site-footer">
+    Made by <a href="https://github.com/lalogaribo" target="_blank"><img id="footer-logo" >Eduardo</a>
+    </footer>
   </body>
 </html>
